change margin to prevent overflow of button

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,7 @@ a {
 
 #form-button {
   border: 2px solid $deep-yellow;
-  margin: 10px;
+  margin: 5px;
   padding: 10px 20px;
   border-radius: 5px;
 }
